# python-secure-upload

./: README.md  mypy.ini  setup.cfg
src/: secure-upload-server
src/secure_upload/: client_auth.py  http_response.py  ip_blocking.py  main.py  server.py
src/secure_upload/upload/: __init__.py  gpg.py  handler.py
tests/: README.md  file.txt  file.txt.gpg  wrong-pass.txt.gpg
