[metadata]
name = secure-upload
version = 0.0.1
author = six-two
author_email = pip@six-two.dev
description = HTTP server for secure file uploads
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/python-secure-upload
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
scripts =
    src/secure-upload-server
install_requires =

[options.packages.find]
where = src
